@@ -35,6 +35,23 @@
 			<key>Vendor Name</key>
 			<string>Unknown </string>
 		</dict>
+		<key>MCP79BAHCI</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleAHCIPort</string>
+			<key>Chipset Name</key>
+			<string>MCP79 AHCI</string>
+			<key>IOClass</key>
+			<string>AppleMCP79AHCI</string>
+			<key>IOPCIPrimaryMatch</key>
+			<string>0x0ab810de</string>
+			<key>IOProbeScore</key>
+			<integer>2000</integer>
+			<key>IOProviderClass</key>
+			<string>IOPCIDevice</string>
+			<key>Vendor Name</key>
+			<string>NVidia</string>
+		</dict>
 		<key>JMicronAHCI</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
